Adjust footer styles to avoid wrapping email.

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -7,6 +7,7 @@
 // Use grey background for code
 pre, code, .highlighter-rouge .highlight { background-color: #f8f8f8; }
 
+// Add logo to masthead
 .site-title::before {
 	content: url("/alsprolog-logo.png");
 	display: inline-block;
@@ -14,3 +15,6 @@ pre, code, .highlighter-rouge .highlight { background-color: #f8f8f8; }
 	width: 37px;
 	top: 5px;
 }
+
+// Avoid wrapping of email address
+.contact-list .u-email { font-size: 95%; }
